# pyink

./: .gitignore  .pre-commit-hooks.yaml  CHANGES.md  README.md  pyproject.toml  tox.ini
.github/workflows/: pypi_upload.yml  test.yml
patches/: pyink.patch
src/pyink/: __init__.py  __main__.py  _width_table.py  brackets.py  cache.py  comments.py  concurrency.py  const.py  debug.py  files.py  handle_ipynb_magics.py  ink.py  ink_adjusted_lines.py  linegen.py  lines.py  mode.py  nodes.py  parsing.py  ranges.py  report.py  strings.py  trans.py
tests/: empty.toml  test.toml  test_black.py  test_format.py  test_ink_adjusted_lines.py  test_ipynb.py  test_no_ipynb.py  test_ranges.py  test_trans.py  util.py
tests/data/: invalid_line_ranges.toml
tests/data/cases/: composition_no_trailing_comma.py  pyink_empty_lines.py  pyink_imports.py  pyink_indent.py  pyink_module_docstring_1.py  pyink_module_docstring_2.py  pyink_module_docstring_3.py  pyink_module_docstring_4.py  pyink_nested_brackets.py  pyink_nested_brackets_explodes.py  pyink_pragma_comments.py  pyink_str_concat_in_func_args.py
tests/data/project_metadata/: both_pyproject.toml  neither_pyproject.toml  only_black_pyproject.toml  only_metadata_pyproject.toml
tests/data/pyink/: empty_lines.py  imports.py  indent.py  module_docstring.py  module_docstring_2.py  module_docstring_3.py  module_docstring_4.py  nested_brackets.py  nested_brackets_explodes.py  pragma_comments.py  str_concat_in_func_args.py
tests/data/pyink_configs/: disable.toml  example.py  majority_quotes.py  majority_quotes.toml  overrides.toml  tool_black.toml
tests/data/simple_cases/: composition.py  fmtonoff.py  function2.py
