[tool.pyink]
# Yes, we use the _Black_ style to format _Pyink_ code.
pyink = false
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
extend-exclude = 'tests/data'
preview = true

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyink"
description = "Pyink is a python formatter, forked from Black with slightly different behavior."
license = "MIT"
requires-python = ">=3.7"
readme = "README.md"
authors = [{name = "The Pyink Maintainers", email = "pyink-maintainers@google.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "click>=8.0.0",
  "mypy_extensions>=0.4.3",
  "pathspec>=0.9.0",
  "platformdirs>=2",
  "tomli>=1.1.0; python_full_version < '3.11.0a7'",
  "typed-ast>=1.4.2; python_version < '3.8' and implementation_name == 'cpython'",
  "typing_extensions>=3.10.0.0; python_version < '3.10'",
  "black>=22.10.0",
]
dynamic = ["version"]

[project.optional-dependencies]
colorama = ["colorama>=0.4.3"]
uvloop = ["uvloop>=0.15.2"]
jupyter = [
  "ipython>=7.8.0",
  "tokenize-rt>=3.2.0",
]

[project.scripts]
pyink = "pyink:patched_main"

[project.urls]
Changelog = "https://github.com/google/pyink/blob/main/CHANGES.md"
Homepage = "https://github.com/google/pyink"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_pyink_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
# Option below requires `tests/optional.py`
addopts = "--strict-config --strict-markers"
optional-tests = [
  "no_jupyter: run when `jupyter` extra NOT installed",
]
markers = [
  "incompatible_with_mypyc: run when testing mypyc compiled black"
]
xfail_strict = true
filterwarnings = [
    "error",
    # this is mitigated by a try/catch in https://github.com/psf/black/pull/2974/
    # this ignore can be removed when support for aiohttp 3.7 is dropped.
    '''ignore:Decorator `@unittest_run_loop` is no longer needed in aiohttp 3\.8\+:DeprecationWarning''',
    # this is mitigated by a try/catch in https://github.com/psf/black/pull/3198/
    # this ignore can be removed when support for aiohttp 3.x is dropped.
    '''ignore:Middleware decorator is deprecated since 4\.0 and its behaviour is default, you can simply remove this decorator:DeprecationWarning''',
    # this is mitigated by https://github.com/python/cpython/issues/79071 in python 3.8+
    # this ignore can be removed when support for 3.7 is dropped.
    '''ignore:Bare functions are deprecated, use async ones:DeprecationWarning''',
    # aiohttp is using deprecated cgi modules - Safe to remove when fixed:
    # https://github.com/aio-libs/aiohttp/issues/6905
    '''ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning''',
]
